Add Java version compatibility matrix to README
Placed directly after the integration model descriptions so users can
immediately see which IBS release works with their Java version. Links
to docs/JavaMigration.md for the full analysis and Priority 2 roadmap.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>