@@ -21,6 +21,7 @@ from any language or framework you are in.
         * [Installation](#installation)
       * [Considerations](#considerations)
     * [Including your project in the BridgeService](#including-your-project-in-the-bridgeservice)
+    * [Java Version Compatibility](#java-version-compatibility)
   * [Starting the Bridge Service](#starting-the-bridge-service)
     * [Running the Bridge Locally](#running-the-bridge-locally)
     * [Running a DEMO](#running-a-demo)
@@ -125,6 +126,31 @@ you add this library. BridgeService 3.12+ uses the `jakarta.servlet` namespace (
 In this model you can simply add your project as a dependency to the BridgeProject.
 
 ![BridgeService Aggregator Model](diagrams/Processes-aggregatorModel.drawio.png)
+
+### Java Version Compatibility
+
+Legend: ✅ Works &nbsp;|&nbsp; ⚠️ Works with workarounds &nbsp;|&nbsp; ❌ Fails
+
+**Injection Model** — the exposed project's JVM loads IBS. Both IBS bytecode and the HTTP framework must be compatible with that JVM.
+
+| IBS release | Exposed Java 8 | Exposed Java 11 | Exposed Java 17 | Exposed Java 21 |
+|---|:---:|:---:|:---:|:---:|
+| **pre-3.12** (Spark, Java 11) | ❌ ¹ | ✅ | ⚠️ ² | ❌ ³ |
+| **3.12+** (Javalin 6, Java 11) | ❌ ¹ | ✅ | ✅ | ✅ |
+
+**Aggregator Model** — IBS runs its own JVM and loads the exposed project's classes via reflection.
+
+| IBS release | Exposed Java 8 | Exposed Java 11 | Exposed Java 17 | Exposed Java 21 |
+|---|:---:|:---:|:---:|:---:|
+| **pre-3.12** (Spark, Java 11) | ✅ | ✅ | ❌ ⁴ | ❌ ⁴ |
+| **3.12+** (Javalin 6, Java 11) | ✅ | ✅ | ❌ ⁴ | ❌ ⁴ |
+
+¹ Exposed project JVM cannot load IBS bytecode — `UnsupportedClassVersionError`.  
+² Spark is unofficial on Java 17 and requires `--add-opens` flags.  
+³ Spark is not compatible with Java 21.  
+⁴ IBS JVM (Java 11) cannot load class files compiled to Java 17+ — `UnsupportedClassVersionError` in the class loader.
+
+For the full analysis and the planned Java 21 upgrade (issue #39), see [docs/JavaMigration.md](docs/JavaMigration.md).
 
 ## Starting the Bridge Service
 
